# DIYEdit_Mobile

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml  generate-apk-aab-debug-release.yml
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  midi-interface.cpp
app/src/main/cpp/fluidsynth/include/: fluidsynth.h
app/src/main/cpp/fluidsynth/include/fluidsynth/: audio.h  event.h  gen.h  ladspa.h  log.h  midi.h  misc.h  mod.h  seq.h  seqbind.h  settings.h  sfont.h  shell.h  synth.h  types.h  version.h  voice.h
app/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/FLAC/: flac-config-version.cmake
app/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/Ogg/: OggTargets.cmake
app/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/Opus/: OpusConfigVersion.cmake  OpusTargets.cmake
app/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/SndFile/: SndFileConfigVersion.cmake
app/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/Vorbis/: VorbisConfigVersion.cmake  VorbisTargets.cmake
app/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/fluidsynth/: FluidSynthTargets.cmake
app/src/main/cpp/fluidsynth/lib/arm64-v8a/glib-2.0/include/: glibconfig.h
app/src/main/cpp/fluidsynth/lib/arm64-v8a/pkgconfig/: fluidsynth.pc
app/src/main/cpp/fluidsynth/lib/armeabi-v7a/cmake/FLAC/: flac-config-version.cmake
app/src/main/cpp/fluidsynth/lib/armeabi-v7a/cmake/Ogg/: OggConfigVersion.cmake
app/src/main/cpp/fluidsynth/lib/armeabi-v7a/cmake/SndFile/: SndFileConfig.cmake  SndFileConfigVersion.cmake
app/src/main/cpp/fluidsynth/lib/armeabi-v7a/cmake/Vorbis/: VorbisConfigVersion.cmake
app/src/main/cpp/fluidsynth/lib/armeabi-v7a/glib-2.0/include/: glibconfig.h
app/src/main/cpp/fluidsynth/lib/armeabi-v7a/pkgconfig/: fluidsynth.pc
app/src/main/cpp/fluidsynth/lib/x86/cmake/FLAC/: flac-config.cmake  targets.cmake
app/src/main/cpp/fluidsynth/lib/x86/cmake/Ogg/: OggConfig.cmake
app/src/main/cpp/fluidsynth/lib/x86/cmake/Opus/: OpusConfigVersion.cmake  OpusTargets-relwithdebinfo.cmake
app/src/main/cpp/fluidsynth/lib/x86/cmake/fluidsynth/: FluidSynthConfig.cmake  FluidSynthConfigVersion.cmake
app/src/main/cpp/fluidsynth/lib/x86/pkgconfig/: fluidsynth.pc
app/src/main/cpp/fluidsynth/lib/x86_64/cmake/FLAC/: targets-relwithdebinfo.cmake
app/src/main/cpp/fluidsynth/lib/x86_64/cmake/Ogg/: OggConfigVersion.cmake  OggTargets-relwithdebinfo.cmake
app/src/main/cpp/fluidsynth/lib/x86_64/cmake/Opus/: OpusConfig.cmake
app/src/main/cpp/fluidsynth/lib/x86_64/cmake/SndFile/: SndFileTargets-relwithdebinfo.cmake  SndFileTargets.cmake
app/src/main/cpp/fluidsynth/lib/x86_64/cmake/Vorbis/: VorbisConfig.cmake  VorbisTargets-relwithdebinfo.cmake
app/src/main/cpp/fluidsynth/lib/x86_64/cmake/fluidsynth/: FluidSynthConfigVersion.cmake  FluidSynthTargets-relwithdebinfo.cmake
app/src/main/cpp/fluidsynth/lib/x86_64/pkgconfig/: fluidsynth.pc
app/src/main/res/drawable/: about.xml  baseline_manage_history_24.xml  cleanuphistory.xml  daynightcycle.xml  daynightcycle_day.xml  daynightcycle_night.xml  directory.xml  exit.xml  (+6 more)
app/src/main/res/drawable-night/: about.xml  about_dark.xml  cleanuphistory.xml  cleanuphistory_dark.xml  daynightcycle.xml  daynightcycle_dark.xml  directory.xml  exit.xml  exit_dark.xml  language.xml  language_dark.xml  openfile.xml  openfile_dark.xml  recentfiles.xml  recentfiles_dark.xml  recenthistory.xml  recenthistory_dark.xml  settings.xml  settings_dark.xml  showfullfilepath.xml  showfullfilepath_dark.xml
gradle/wrapper/: gradle-wrapper.properties
(+203 files in other folders)
